tests/fixtures/invalid/pow_list_int_bytes.py
# Cannot call pow() with List[int], Int, Bytes
x = pow([1, 2, 3], 1, b"hello")
